# virtual-network-layers-cpp

./: .cproject  .gitignore  .project  CMakeLists.txt  LICENSE  Makefile  Makefile.rules  README  codegen.sh
gui/interface/: Object.vni  ReplayGUI.vni
include/: Address.h  Array.h  ByteBuffer.h  CRC64.h  Downlink.h  Frame.h  List.h  Map.h  Node.h  Object.h  Packet.h  Queue.h  Router.h  Runnable.h  String.h  Struct.h  Switch.h  System.h  TcpServer.h  TcpUplink.h  Uplink.h  Util.h
include/io/: Buffer.h  BufferedStream.h  ByteInput.h  CompressedStream.h  Socket.h  SocketBuffer.h  Stream.h  StreamBuffer.h  TypeOutput.h
include/io/poll/: Server.h
include/io/socket/: PollServer.h  Server.h
include/phy/: Array.h  AtomicQueue.h  Engine.h  Fiber.h  FiberEngine.h  Layer.h  Link.h  List.h  MPSC_Queue.h  Map.h  Memory.h  Message.h  Node.h  Object.h  Packet.h  Pointer.h  Pool.h  Processor.h  Queue.h  Random.h  Reader.h  Reference.h  Registry.h  RingBuffer.h  Router.h  Stream.h  String.h  System.h  ThreadEngine.h  Util.h
include/util/: mpsc_queue.h  pool.h  queue.h  simple_hashmap.h  simple_queue.h  simple_stack.h  spinlock.h  types.h
include/vnl/: Actor.h  Address.h  Algorithm.h  Array.h  Base.h  Basic.h  Binary.h  BinaryValue.h  CRC64.h  Client.h  Database.h  Downlink.h  Engine.h  Enum.h  FiberEngine.h  Frame.h  Hash.h  Hash32.h  Hash64.h  HashValue32.h  HashValue64.h  InputPin.h  Interface.h  Layer.h  List.h  Machine.h  Map.h  Memory.h  Message.h  Module.h  Node.h  Object.h  Operators.h  OutputPin.h  Packet.h  Pipe.h  Player.h  Pointer.h  Pool.h  Process.h  (+35 more)
include/vnl/gui/: Main.h  Object.h  ReplayGUI.h
include/vnl/io/: Buffer.h  ByteBuffer.h  ByteInput.h  ByteOutput.h  Error.h  File.h  PageBuffer.h  Serializable.h  Socket.h  Stream.h  StreamBuffer.h  StringStream.h  TypeInput.h  TypeOutput.h  TypeStream.h
include/vnl/phy/: Engine.h  FiberEngine.h  Layer.h  Memory.h  Message.h  Node.h  Object.h  Pipe.h  Pool.h  Random.h  Reference.h  Registry.h  RingBuffer.h  Stream.h  ThreadEngine.h  Timer.h
interface/vnl/: Announce.vni  BinaryValue.vni  Bool.vni  Builtin.vni  Client.vni  Database.vni  Downlink.vni  Exception.vni  Exit.vni  Hash.vni  Header.vni  Heartbeat.vni  Instance.vni  Integer.vni  LogMsg.vni  Machine.vni  Module.vni  Object.vni  Player.vni  Pointer.vni  Process.vni  Real.vni  RecordHeader.vni  RecordValue.vni  Recorder.vni  Request.vni  Shutdown.vni  SpyTool.vni  Storage.vni  TcpClient.vni  TcpServer.vni  TcpUplink.vni  Topic.vni  UdpServer.vni  Uplink.vni  Value.vni
lib/: .gitignore
old/: ByteBuffer.h  FiberEngine.cpp  FiberEngine.h  Frame.h  Node.cpp  Node.h  Object.cpp  Packet.h  Router.cpp  Struct.h  TcpServer.cpp  TcpServer.h  TcpUplink.cpp  TcpUplink.h  ThreadEngine.cpp  ThreadEngine.h  Uplink.h  linear_hashmap.h  lockfree_mpsc_queue.h  lockfree_spsc_queue.h  spinlock.h  stream_alloc.h
old/io/: Resolver.h  Stream.h
old/libuv/: Server.h  Socket.h
src/: BinaryValue.cpp  CRC64.cpp  Engine.cpp  FiberEngine.cpp  Layer.cpp  Makefile  Memory.cpp  Message.cpp  Module.cpp  Node.cpp  Object.cpp  Pipe.cpp  Random.cpp  Registry.cpp  Router.cpp  String.cpp  Switch.cpp  TcpServer.cpp  TcpUplink.cpp  Type.cpp
src/io/: PollServer.cpp  Socket.cpp  poll.Server.cpp
src/phy/: Engine.cpp  FiberEngine.cpp  Link.cpp  Makefile  Memory.cpp  Message.cpp  Object.cpp  Random.cpp  Registry.cpp  Router.cpp  Stream.cpp  ThreadEngine.cpp
src/util/: ByteBuffer.cpp  CRC64.cpp  Makefile  tadns.c
test/: .gitignore  CMakeLists.txt  Makefile  codegen.sh  producer_consumer.h  test_atomics.cpp  test_module.cpp  test_packet.cpp  test_phy  test_phy.cpp  test_phy_router  test_phy_router.cpp  test_router.cpp  test_stuff  test_stuff.cpp  test_tcp.cpp  test_tcp_client.cpp  test_tcp_server.cpp  test_type_stream.cpp
test/interface/test/: TestNode.vni  TestType.vni  TestValue.vni
test/old/: producer_consumer.h  test_link.cpp  test_local.cpp  test_stuff.cpp  test_tcp.cpp
test/test/: TestNode.h  TroubleMaker.h
(+18 files in other folders)
